Interger memory