@@ -42,7 +42,8 @@ public class References {
     public static void main(String[] args){
         int size = 1000;
         if(args.length > 0)
-            size = new Integer(args[0]);
+//            size = new Integer(args[0]);
+            size = Integer.valueOf(args[0]);
         LinkedList<SoftReference<VeryBig>> sa =
                 new LinkedList<>();
         for(int i=0;i<size;i++){
